--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@font-face {
+  font-family: "rubik";
+  src: local("rubik"), url("./fonts/Rubik-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
+@font-face {
+  font-family: "opensans";
+  src: local("opensans"), url("./fonts/OpenSans-Bold.ttf") format("truetype");
+  font-weight: bold;
+}
