--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,9 @@ code {
   src: local("roboto"), url("./fonts/Roboto-Light.ttf") format("truetype");
   font-weight: regular;
 }
+@font-face {
+  font-family: "montserrat";
+  src: local("montserrat"),
+    url("./fonts/Montserrat-Bold.ttf") format("truetype");
+  font-weight: regular;
+}
