--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,10 +1,8 @@
-.ecosystem-content:before {
+.neon-overview:before {
   background: linear-gradient(180deg, #73e4f5 0%, #73f59b 100%);
   height: 100%;
   width: 100%;
-  filter: blur(90px);
+  filter: blur(100px);
   position: absolute;
   content: "";
-  top: 0;
-  left: 0;
 }
