--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,8 +1,16 @@
-.neon-overview:before {
+.neon-content:before,
+.neon-header:before {
   background: linear-gradient(180deg, #73e4f5 0%, #73f59b 100%);
   height: 100%;
   width: 100%;
-  filter: blur(100px);
+  filter: blur(200px);
   position: absolute;
   content: "";
+  top: 0;
+  left: 0;
+}
+
+.neon {
+  text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
+    0 0 80px #00b3ff, 0 0 120px #00b3ff;
 }
