--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,6 +1,6 @@
 .neon-content:before,
 .neon-header:before {
-  background: linear-gradient(180deg, #73e4f5 0%, #73f59b 100%);
+  background: linear-gradient(0deg, #0000001c 0%, #06ff00b0 100%);
   height: 100%;
   width: 100%;
   filter: blur(200px);
@@ -10,7 +10,7 @@
   left: 0;
 }
 
-.neon {
+/* .neon {
   text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
     0 0 80px #00b3ff, 0 0 120px #00b3ff;
-}
+} */
