--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -1,4 +1,4 @@
-.neon-content:before,
+/* .neon-content:before,
 .neon-header:before {
   background: linear-gradient(0deg, #0000001c 0%, #06ff00b0 100%);
   height: 100%;
@@ -8,9 +8,9 @@
   content: "";
   top: 0;
   left: 0;
-}
-
-/* .neon {
-  text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
-    0 0 80px #00b3ff, 0 0 120px #00b3ff;
 } */
+
+.neon {
+  text-shadow: 0 0 10px #00ff80, 0 0 20px #00ff80, 0 0 40px #00ff80,
+    0 0 80px #00ff80, 0 0 120px #00ff80;
+}
