--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -11,6 +11,6 @@
 } */
 
 .neon {
-  text-shadow: 0 0 10px #00ff80, 0 0 20px #00ff80, 0 0 40px #00ff80,
-    0 0 80px #00ff80, 0 0 120px #00ff80;
+  text-shadow: 0 0 10px #00ff808a, 0 0 20px #00ff808a, 0 0 40px #00ff808a,
+    0 0 80px #00ff808a, 0 0 120px #00ff808a;
 }
