remove our team

--- a/src/components/Overview/Overview.css
+++ b/src/components/Overview/Overview.css
@@ -10,7 +10,7 @@
   left: 0;
 } */
 
-.neon {
+/* .neon {
   text-shadow: 0 0 10px #00ff808a, 0 0 20px #00ff808a, 0 0 40px #00ff808a,
     0 0 80px #00ff808a, 0 0 120px #00ff808a;
-}
+} */
