--- a/src/components/Mode2/Mode2.css
+++ b/src/components/Mode2/Mode2.css
@@ -1,5 +1,4 @@
 .ecosystem-content {
   border: 1px solid transparent;
-  box-shadow: 1px 1px 10px #00ddffff, 1px 1px 20px #00ddffff,
-    1px 1px 40px #00ddffff;
+  box-shadow: 1px 1px 10px #a0a9e6, 1px 1px 20px #2d46f9, 1px 1px 40px #2d46f9;
 }
