--- a/src/components/Mode2/Mode2.css
+++ b/src/components/Mode2/Mode2.css
@@ -1,4 +1,4 @@
 .ecosystem-content {
   border: 1px solid transparent;
-  box-shadow: 1px 1px 10px #28da16, 1px 1px 20px #73f59b, 1px 1px 40px #2df94026;
+  box-shadow: 1px 1px 10px #bddecd, 1px 1px 20px #73f59b, 1px 1px 40px #2df94026;
 }
