--- a/src/components/Mode2/Mode2.css
+++ b/src/components/Mode2/Mode2.css
@@ -1,4 +1,4 @@
 .ecosystem-content {
-  border: 1px solid transparent;
+  border: 2px solid #35c038;
   box-shadow: 1px 1px 10px #bddecd, 1px 1px 20px #73f59b, 1px 1px 40px #2df94026;
 }
