--- a/src/components/Mode2/Mode2.css
+++ b/src/components/Mode2/Mode2.css
@@ -7,3 +7,15 @@
   text-shadow: 0 0 10px #00b3ff, 0 0 20px #00b3ff, 0 0 40px #00b3ff,
     0 0 80px #00b3ff, 0 0 120px #00b3ff;
 }
+
+.ecosystem-content:before,
+.eco-img:before {
+  background: linear-gradient(180deg, #0c0c0c00 0%, #4f662c 100%);
+  height: 100%;
+  width: 100%;
+  filter: blur(75px);
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+}
