--- a/src/components/Mode2/Mode2.css
+++ b/src/components/Mode2/Mode2.css
@@ -1,6 +1,6 @@
 .ecosystem-content {
-  border: 2px solid #73f59b;
-  box-shadow: 1px 1px 10px #73f59b, 1px 1px 20px #73f59b, 1px 1px 40px #73f59b;
+  border: 2px solid #ffffff;
+  box-shadow: 1px 1px 10px #f6fcf9, 1px 1px 20px #e6ecf3, 1px 1px 40px #f3f0f46e;
 }
 
 .neon-text {
@@ -21,7 +21,7 @@
 } */
 .ecosystem-content:before,
 .eco-img:before {
-  background: linear-gradient(174deg, #00000000 0%, #3be360 100%);
+  background: linear-gradient(174deg, #00000000 0%, #3102f780 100%);
   height: 99%;
   width: 99%;
   filter: blur(30px);
