changed background Color

--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,9 @@
 .font-roboto {
   font-family: "roboto";
 }
-.font-montserrat {
+/*.font-montserrat {
   font-family: "montserrat";
-}
+}*/
 .font-sansman {
   font-family: "sansman";
 }
